tests/negative/gold/prefix_assign2_test.gold
tests/negative/prefix_assign2_test.toit:8:3: error: Can't use prefix 'prefix' as an expression
  prefix += unresolved
  ^~~~~~
tests/negative/prefix_assign2_test.toit:8:13: error: Unresolved identifier: 'unresolved'
  prefix += unresolved
            ^~~~~~~~~~
Compilation failed.
